prod/gateway.tf
# ----------------------
# Internet Gateway
# ----------------------
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project}-${var.env}-igw"
  }
}
